# fix-compaudit

./: .mergify.yml  .versio.yaml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build-releases.yml  commit-message.yml  release.yml  test-and-tag.yml  test.yml  tests.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: main.rs
