[package]
name = "fix-compaudit"
version = "0.46.78"
authors = [ "Billie Thompson <billie+fix-compaudit@billiecodes.com>" ]
edition = "2018"
description = "Correct the permissions problems that highlighted by `compaudit`. Fixing these is kinda a pain to do manually. This should fix them."
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"
repository = "https://github.com/PurpleBooth/fix-compaudit/"
keywords = [ "zsh", "permissions" ]
categories = [ "command-line-utilities" ]

[dependencies]
users = "0.11.0"
clap = { version = "3.1.7", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }

[dev-dependencies]
tempfile = "3.3.0"
